tests/files/type_checker_tests/should_pass/240.cmdr
//Test that lambdas type check
add = fn () -> { return 1 + 2; };
add();
x = add();
