tests/files/type_checker_tests/should_fail/081.cmdr
//Should fail using uninitialized variable
foo = fn (x: a) -> {
    return x;
};
